# autoscore

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml
autoscore/: filelistwidget.py  main.py  mainui.py  mainui.ui  mainwindow.py  process_ui_files.py  resource.py  safemath.py  version.py
autoscore/resources/icons/: Icon.icns  README.md
