# To install deps from toml
# -------------------------
# > pip install .[dev] && pip uninstall .
# OR
# > make install
#
# To push to github
# -------------------------
# See Workflow.md

# NOTE: Fix PySide6 xcb plugin error on linux by installing: sudo apt install libxcb-cursor0

[build-system]
requires = ["setuptools>=46.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AutoScore"
version = "2025.1.29.1"
description = "AutoScore: a tool I use when grading essays or short-answer papers to keep track of the scores."
authors = [{ name = "Travis L. Seymour, PhD", email = "nogard@ucsc.edu" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["education", "grading", "writing", "utility"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]
dependencies = [
    "pyside6",
    "docx2txt",
    "loguru",
    "pandas",
    "openpyxl",
    "xlrd",
    "python-docx",
    "tomli"
]

[project.urls]
"Bug Tracker" = "https://github.com/travisseymour/autoscore/issues"
"Documentation" = "https://github.com/travisseymour/autoscore#readme"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "build",
    "check-manifest",
    "plumbum",
    "qt6-tools",
]

[project.scripts]
autoscore = "autoscore.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["autoscore"]  # Include only the 'autoscore' package
namespaces = false

# pull in any files defined in MANIFEST.in use with importlib.resources
[tool.setuptools]
include-package-data = true


[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
lint.ignore = ["F821", "F841", "E722"]  # undefined name, assigned but unused variable, bare except